--- a/libs/simplepage/aboutpage/src/lib/aboutpage/aboutpage.component.html
+++ b/libs/simplepage/aboutpage/src/lib/aboutpage/aboutpage.component.html
@@ -1,36 +1,41 @@
 <lib-navfeature></lib-navfeature>
-
-<h2>Dolor sit</h2>
-
-
 <div>
-    <img class="picture-detail" src="assets/img/about1.png" alt="Bild">
+  <div>
+    <img class="picture-detail" src="assets/img/landing/3.png" alt="Bild" />
+  </div>
+
+  <div>
+    <h2>Dolor sit</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt
+      quaerat consequuntur omnis sint rem nihil perspiciatis commodi
+      exercitationem necessitatibus dolore a, ad nemo est minima molestiae
+      magnam modi quod?
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo facere
+      minima necessitatibus, aperiam officiis officia natus laboriosam ipsum
+      nobis explicabo?
+    </p>
+
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo perferendis
+      nobis, vitae quos hic impedit provident ducimus maxime reprehenderit
+      inventore adipisci! Deleniti vel doloremque dicta libero! Velit qui
+      sapiente vitae voluptatibus quis illum nisi natus ex necessitatibus in
+      reiciendis accusamus est hic ab deleniti possimus, iste facere quae
+      laborum error!
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est similique
+      amet optio minima laborum consequuntur, porro molestias quae temporibus
+      ab?
+    </p>
+  </div>
+  <div>
+    <footer></footer>
+  </div>
 </div>
-
-
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores deserunt
-  quaerat consequuntur omnis sint rem nihil perspiciatis commodi exercitationem
-  necessitatibus dolore a, ad nemo est minima molestiae magnam modi quod?
-</p>
-
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo facere minima
-  necessitatibus, aperiam officiis officia natus laboriosam ipsum nobis
-  explicabo?
-</p>
-
-<p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo perferendis
-  nobis, vitae quos hic impedit provident ducimus maxime reprehenderit inventore
-  adipisci! Deleniti vel doloremque dicta libero! Velit qui sapiente vitae
-  voluptatibus quis illum nisi natus ex necessitatibus in reiciendis accusamus
-  est hic ab deleniti possimus, iste facere quae laborum error!
-</p>
-
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est similique amet
-  optio minima laborum consequuntur, porro molestias quae temporibus ab?
-</p>
-
-<footer></footer>
