--- a/libs/simplepage/blogpage/src/lib/blogpage/blogpage.component.html
+++ b/libs/simplepage/blogpage/src/lib/blogpage/blogpage.component.html
@@ -1,96 +1,75 @@
 <div>
-    <lib-navfeature></lib-navfeature>
-  
-    <h2>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit
-      soluta omnis quaerat!
-    </h2>
-  
+  <lib-navfeature></lib-navfeature>
+
+  <h2>Quaerat</h2>
+
+  <div>
     <div>
-      <img class="picture-blog" src="assets/img/blog1.png" alt="Bild1">
+      <img class="picture-blog" src="assets/img/landing/1.png" alt="Bild1" />
+
+      <h3>
+        Rolestiae tempore, amet consequatur, illum pariatur magnam deserunt
+        nostrum voluptatum laborum.
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatum
+        officiis impedit aperiam culpa nam quia quibusdam sapiente fuga illum
+        ullam iste atque ex id harum libero, doloremque odit cupiditate!
+      </p>
     </div>
-    
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum saepe
-      exercitationem libero deserunt, nobis ex dolorem perspiciatis dignissimos
-      consequatur aperiam dicta non eius modi? Itaque, ut ipsum? Ut vel et soluta
-      obcaecati illum tenetur nihil dolorem est aliquid nostrum quidem, adipisci
-      beatae? Nobis, natus voluptas! A quae quas soluta voluptatem, culpa voluptas
-      impedit doloremque provident odio possimus quam doloribus ratione et nobis
-      hic obcaecati suscipit illo ipsum, delectus ab quidem nostrum totam,
-      reprehenderit blanditiis. Quibusdam ab recusandae odio quos atque facilis
-      expedita iusto rem? Perspiciatis corporis omnis non nostrum similique
-      accusantium minima aut earum, dolor voluptatem rem mollitia soluta natus?
-    </p>
-  
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum saepe
-      exercitationem libero deserunt, nobis ex dolorem perspiciatis dignissimos
-      consequatur aperiam dicta non eius modi? Itaque, ut ipsum? Ut vel et soluta
-      obcaecati illum tenetur nihil dolorem est aliquid nostrum quidem, adipisci
-      beatae? Nobis, natus voluptas! A quae quas soluta voluptatem, culpa voluptas
-      impedit doloremque provident odio possimus quam doloribus ratione et nobis
-      hic obcaecati suscipit illo ipsum, delectus ab quidem nostrum totam,
-      reprehenderit blanditiis. Quibusdam ab recusandae odio quos atque facilis
-      expedita iusto rem? Perspiciatis corporis omnis non nostrum similique
-      accusantium minima aut earum, dolor voluptatem rem mollitia soluta natus?
-    </p>
-  
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum saepe
-      exercitationem libero deserunt, nobis ex dolorem perspiciatis dignissimos
-      consequatur aperiam dicta non eius modi? Itaque, ut ipsum? Ut vel et soluta
-      obcaecati illum tenetur nihil dolorem est aliquid nostrum quidem, adipisci
-      beatae? Nobis, natus voluptas! A quae quas soluta voluptatem, culpa voluptas
-      impedit doloremque provident odio possimus quam doloribus ratione et nobis
-      hic obcaecati suscipit illo ipsum, delectus ab quidem nostrum totam,
-      reprehenderit blanditiis. Quibusdam ab recusandae odio quos atque facilis
-      expedita iusto rem? Perspiciatis corporis omnis non nostrum similique
-      accusantium minima aut earum, dolor voluptatem rem mollitia soluta natus?
-    </p>
-  
+
     <div>
-      <ul>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-      </ul>
+      <img class="picture-blog" src="assets/img/landing/1.png" alt="Bild1" />
+
+      <h3>
+        Rolestiae tempore, amet consequatur, illum pariatur magnam deserunt
+        nostrum voluptatum laborum.
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatum
+        officiis impedit aperiam culpa nam quia quibusdam sapiente fuga illum
+        ullam iste atque ex id harum libero, doloremque odit cupiditate!
+      </p>
     </div>
-  
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum saepe
-      exercitationem libero deserunt, nobis ex dolorem perspiciatis dignissimos
-      consequatur aperiam dicta non eius modi? Itaque, ut ipsum? Ut vel et soluta
-      obcaecati illum tenetur nihil dolorem est aliquid nostrum quidem, adipisci
-      beatae? Nobis, natus voluptas! A quae quas soluta voluptatem, culpa voluptas
-      impedit doloremque provident odio possimus quam doloribus ratione et nobis
-      hic obcaecati suscipit illo ipsum, delectus ab quidem nostrum totam,
-      reprehenderit blanditiis. Quibusdam ab recusandae odio quos atque facilis
-      expedita iusto rem? Perspiciatis corporis omnis non nostrum similique
-      accusantium minima aut earum, dolor voluptatem rem mollitia soluta natus?
-    </p>
-  
-    <div>
-      <img class="picture-blog" src="assets/img/blog2.png" alt="Bild1">
-    </div>
-  
-    <div>
-      <ul>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-        <li>aliquid nostrum</li>
-      </ul>
-    </div>
-  
-    <p>
-      hic obcaecati suscipit illo ipsum, delectus ab quidem nostrum totam,
-      reprehenderit blanditiis. Quibusdam ab recusandae odio quos atque facilis
-      expedita iusto rem? Perspiciatis corporis omnis non nostrum similique
-      accusantium minima aut earum, dolor voluptatem rem mollitia soluta natus?
-    </p>
-  
-    <footer></footer>
   </div>
-  
+
+  <div>
+    <div>
+      <img class="picture-blog" src="assets/img/landing/2.png" alt="Bild" />
+      <h3>
+        Amet consequatur, illum pariatur magnam deserunt nostrum voluptatum
+        laborum.
+      </h3>
+      <button>Click!</button>
+    </div>
+
+    <div>
+      <img class="picture-blog" src="assets/img/landing/2.png" alt="Bild" />
+      <h3>
+        Amet consequatur, illum pariatur magnam deserunt nostrum voluptatum
+        laborum.
+      </h3>
+      <button>Click!</button>
+    </div>
+
+    <div>
+      <img class="picture-blog" src="assets/img/landing/2.png" alt="Bild" />
+      <h3>
+        Amet consequatur, illum pariatur magnam deserunt nostrum voluptatum
+        laborum.
+      </h3>
+      <button>Click!</button>
+    </div>
+
+    <div>
+      <img class="picture-blog" src="assets/img/landing/2.png" alt="Bild" />
+      <h3>
+        Amet consequatur, illum pariatur magnam deserunt nostrum voluptatum
+        laborum.
+      </h3>
+      <button>Click!</button>
+    </div>
+  </div>
+
+  <footer></footer>
+</div>
