--- a/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.css
+++ b/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.css
@@ -54,3 +54,10 @@
     flex-direction: column;
   }
   
+
+  .required::after {
+    content: " *"; /* Leerzeichen davor für etwas Abstand */
+    color: red;
+    /* Optional: Weitere Stile wie Schriftgröße oder Positionierung */
+    /* font-weight: bold; */ 
+  }
