--- a/libs/simplepage/maincontent/src/lib/maincontent/maincontent.component.html
+++ b/libs/simplepage/maincontent/src/lib/maincontent/maincontent.component.html
@@ -1,1 +1,3 @@
 <p>Maincontent works!</p>
+
+<p>Ich denke das dass hier als eine ART Tolltip genommen werden kann! Also user klickt auf Kurs in OFFER und dann erscheint dieser tool tip oder vielleicht dialog das dass hier nur eine Beispiel seite ist und es keinne richtigen content gibt!</p>
