--- a/libs/simplepage/navfeature/src/lib/navfeature/navfeature.component.html
+++ b/libs/simplepage/navfeature/src/lib/navfeature/navfeature.component.html
@@ -1,4 +1,7 @@
 <div class="wrapper-nav">
+  <div>
+    <p>John Doe</p>
+  </div>
     <ul>
       <li><a [routerLink]="'/landingpage'">Home</a></li>
       <li><a [routerLink]="'/offerpage'">Kurse</a></li>
