--- a/libs/simplepage/newsletter/src/lib/newsletter/newsletter.component.html
+++ b/libs/simplepage/newsletter/src/lib/newsletter/newsletter.component.html
@@ -19,23 +19,21 @@
     <p>text für checkboxs</p>
   
     <form>
-      <label>Ipsum dolor </label><br />
-      <input /><br />
-  
-      <label>Dalalaimal</label><br />
-      <input /><br />
-  
+      
       <label>Lorem, ipsum.</label><br />
       <input /><br />
   
       <label>Lorem.</label><br />
-      <textarea></textarea><br />
-  
-      <label>Lorem ipsum dolor sit.</label> <br />
       <input /><br />
+  
+      <p>checkbox 1</p>
+
+      <p>checkbox 2 - im not a robot! </p>
   
       <button>Lorem, ipsum.</button>
     </form>
-    <footer></footer>
+
+    
+
   </div>
   
