--- a/libs/simplepage/offerpage/src/lib/offerpage/offerpage.component.html
+++ b/libs/simplepage/offerpage/src/lib/offerpage/offerpage.component.html
@@ -1,5 +1,48 @@
-<p>Offer works!</p>
-
 <lib-navfeature></lib-navfeature>
+
+<h2>Lorem, ipsum dolor.</h2>
+<div>
+  <img class="picture-sp" src="assets/img/landing/1.png" alt="Bild1" />
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam deleniti
+    exercitationem et vero aut cupiditate repudiandae repellat iusto officia
+    corrupti eos quidem sit fuga veritatis ex id, architecto debitis non!
+  </p>
+  <button>Lorem, ipsum.</button>
+</div>
+
+<!-- <button [routerLink]="'/offerPage'">Totam necessitatibus!</button> -->
+<div>
+  <img class="picture-sp" src="assets/img/landing/2.png" alt="Bild1" />
+  <h3>Cyonsectetur adipisicing elit!</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam deleniti
+    exercitationem et vero aut cupiditate repudiandae repellat iusto officia
+    corrupti eos quidem sit fuga veritatis ex id, architecto debitis non!
+  </p>
+  <button>Lorem, ipsum.</button>
+</div>
+
+<div>
+  <img class="picture-sp" src="assets/img/landing/2.png" alt="Bild1" />
+  <h3>Cyonsectetur adipisicing elit!</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam deleniti
+    exercitationem et vero aut cupiditate repudiandae repellat iusto officia
+    corrupti eos quidem sit fuga veritatis ex id, architecto debitis non!
+  </p>
+  <button>Lorem, ipsum.</button>
+</div>
+
+<div>
+  <img class="picture-sp" src="assets/img/landing/2.png" alt="Bild1" />
+  <h3>Cyonsectetur adipisicing elit!</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam deleniti
+    exercitationem et vero aut cupiditate repudiandae repellat iusto officia
+    corrupti eos quidem sit fuga veritatis ex id, architecto debitis non!
+  </p>
+  <button>Lorem, ipsum.</button>
+</div>
 
 <footer></footer>
