--- a/libs/simplepage/contactpage/src/lib/contactpage/contactpage.component.html
+++ b/libs/simplepage/contactpage/src/lib/contactpage/contactpage.component.html
@@ -21,7 +21,6 @@
   <label>Loremeine Recusandae</label><br />
   <textarea></textarea><br />
 
-  <input /><br />
   <label
     >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis sunt
     non dolorem nobis quisquam cupiditate officia eligendi sed, minus nulla,
@@ -30,6 +29,44 @@
   ><br />
 
   <button type="submit">Absenden</button>
+
+  <p>Ich habe die Datenschutzerklärung zur Kenntnis genommen und stimme zu, dass meine Angaben zur Kontaktaufnahme und für Rückfragen gespeichert und verarbeitet werden.</p>
+  <p>check BOX ich bin kein Roboter!</p>
+
 </form>
+
+<div class="accordion-container">
+  <!-- Gehe durch jedes Element im 'faqItems'-Array (aus der TS-Datei dieser Komponente) -->
+  <div *ngFor="let item of faqItems; let i = index" class="accordion-item">
+
+    <!-- Der klickbare Header -->
+    <div
+      class="accordion-header"
+      (click)="toggleItem(i)"
+      role="button"
+      tabindex="0"
+      [attr.aria-expanded]="currentlyOpenIndex === i"
+      [attr.aria-controls]="'faq-content-' + i"
+      (keydown.enter)="toggleItem(i)"
+      (keydown.space)="toggleItem(i)">
+
+      <span class="accordion-title">{{ item.title }}</span>
+      <!-- Zeige '+' oder '-' basierend auf dem offenen Zustand -->
+      <span class="accordion-icon">{{ currentlyOpenIndex === i ? '-' : '+' }}</span>
+    </div>
+
+    <!-- Der Inhalt, der nur angezeigt wird, wenn das Element offen ist -->
+    <div
+      *ngIf="currentlyOpenIndex === i"
+      class="accordion-content"
+      [id]="'faq-content-' + i"
+      role="region">
+       <!-- Verwende [innerHTML] nur, wenn du sicher bist, dass der Inhalt sicher ist! -->
+      <div [innerHTML]="item.content"></div>
+      <!-- Alternativ für reinen Text: <p>{{ item.content }}</p> -->
+    </div>
+
+  </div>
+
 
 <footer></footer>
