--- a/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.html
+++ b/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.html
@@ -1,55 +1,48 @@
 <div class="wrapper-footer">
-    <h3 class="header">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, corporis!
-    </h3>
-  
-    <div class="container-name-mail">
-      <div class="container-name">
+  <h3 class="header">JETZT FÜR DEN NEWSLETTER ANMELDEN!</h3>
+
+  <div class="container-name-mail">
+    <div class="container-name">
+      <div>
         <div>
-          <div>
-            <label for="">Name</label>
-          </div>
-          <div>
-            <input class="dtl-inp" type="text" />
-          </div>
+          <label for="name" class="required" for="">Name</label>
         </div>
-      </div>
-  
-      <div class="container-name">
         <div>
-          <div>
-            <label for="">E-Mail</label>
-          </div>
-          <div>
-            <input class="dtl-inp" type="text" />
-          </div>
+          <input class="dtl-inp" type="text" />
         </div>
       </div>
     </div>
-  
-    <label class="wrapper-checkbox">
-      <input type="checkbox" id="newsletterConsent" />
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, tenetur
-      vero. Praesentium illo deserunt ratione odio voluptate, saepe at eveniet.
-    </label>
-  
-    <div class="wrapper-text">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quibusdam
-        consectetur ipsa iusto quia magnam id error iste natus corrupti? Lorem,
-        ipsum dolor sit amet consectetur adipisicing elit. Illo harum perspiciatis
-        consequuntur at aperiam facilis totam vitae provident, nostrum maiores.
-      </p>
-  
-      <button>Lorem, ipsum.</button>
-  
-      <p>Copyright © 2025 Lorem, ipsum dolor.</p>
-  
-      <ul>
-        <li><a [routerLink]="'/impressum'">Impressum</a></li>
-        <li><a [routerLink]="'/datenschutzpage'">Datenschutzerklärung</a></li>
-        <li><a [routerLink]="'/landingpage'">Home</a></li>
-      </ul>
+
+    <div class="container-name">
+      <div>
+        <div>
+          <label for="email" class="required" for="">E-Mail</label>
+        </div>
+        <div>
+          <input class="dtl-inp" type="text" />
+        </div>
+      </div>
     </div>
   </div>
-  
+
+  <label class="wrapper-checkbox">
+    <input type="checkbox" id="newsletterConsent" />
+    Mit meiner Anmeldung zum Newsletter willige ich ein, regelmäßig werbende
+    Newsletter per E-Mail zu erhalten. Ich kann diese Einwilligung jederzeit
+    widerrufen. Die &nbsp;<a [routerLink]="['/datenschutzpage']"
+      >Datenschutzerklärung</a
+    >&nbsp;&nbsp;habe ich zur Kenntnis genommen.
+  </label>
+
+  <div class="wrapper-text">
+    <button (click)="onSubmit()">Jetzt anmelden</button>
+
+    <p>Copyright © 2025 Lorem, ipsum dolor.</p>
+
+    <ul>
+      <li><a [routerLink]="'/impressum'">Impressum</a></li>
+      <li><a [routerLink]="'/datenschutzpage'">Datenschutzerklärung</a></li>
+      <li><a [routerLink]="'/landingpage'">Home</a></li>
+    </ul>
+  </div>
+</div>
