Update Button Control

--- a/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.html
+++ b/libs/simplepage/footer/src/lib/footerfeature/footerfeature.component.html
@@ -37,6 +37,11 @@
   <div class="wrapper-text">
     <button (click)="onSubmit()">Jetzt anmelden</button>
 
+    <ui-button 
+    [label]="'Jetzt anmelden'" 
+    [isPrimary]="true"
+    ></ui-button>
+
     <p>Copyright © 2025 Lorem, ipsum dolor.</p>
 
     <ul>
